--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -306,9 +306,12 @@
 /***************** Status bar *****************/
 
 .status-bar {
-  -fx-font-size: .9em;
   -fx-border-width: 1 0 0 0;
   -fx-border-color: -fx-box-border;
+}
+
+.status-bar .text {
+  -fx-font-size: .9em;
 }
 
 .status-bar .tooltip {
@@ -338,7 +341,7 @@
 /***************** Navigation *****************/
 
 .main-navigation > .toggle-button {
-  -fx-font-size: 1.6em;
+  -fx-font-size: 1.5em;
   -fx-text-fill: -fx-dark-text-color;
   -fx-background-color: transparent;
 }
