--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -141,6 +141,9 @@
       derive(-fx-color,20%) 20%,
       derive(-fx-color,40%) 30%
   );
+
+  /* This is NOT from modena. */
+  -fx-context-menu-background: rgba(0, 0, 0, .8);
 }
 
 .scroll-bar > .increment-button > .increment-arrow,
@@ -155,6 +158,7 @@
 .scroll-bar > .decrement-button:pressed > .decrement-arrow {
     -fx-background-color: -fx-mark-highlight-color,derive(-fx-base,55%);
 }
+
 
 /***************** Text field *****************/
 
@@ -297,7 +301,7 @@
 }
 
 .context-menu {
-  -fx-background-color: rgba(0, 0, 0, .8);
+  -fx-background-color: -fx-context-menu-background;
   -fx-text-fill: -secondary-text-color;
   -fx-min-width: 120px;
   -fx-border-color: -fx-box-border;
@@ -356,6 +360,49 @@
   -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
 }
 
+/***************** Notification button *****************/
+
+.notification-button {
+  -fx-min-width: 2.5em;
+  -fx-min-height: 2.5em;
+}
+
+.notification-button:info {
+  -fx-base: -fx-accent;
+}
+
+.notification-button:warn {
+  -fx-base: #e2932c;
+}
+
+.notification-button:error {
+  -fx-base: #cb3d3d;
+}
+
+/***************** Notifications *****************/
+
+.persistent-notifications {
+  -fx-background-color: black;
+  -fx-background-radius: 5;
+  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+}
+
+.no-notifications {
+  -fx-text-fill: -fx-dark-text-color;
+}
+
+.notification-close-button {
+  -fx-background-color: transparent;
+  -fx-background-radius: 1.0em;
+  -fx-padding: 0;
+  -fx-min-width: 20;
+  -fx-min-height: 20;
+}
+
+.notification-close-button:hover {
+  -fx-background-color: -fx-control-inner-background;
+}
+
 /***************** Tabs *****************/
 
 .tab-header-background {
@@ -369,7 +416,7 @@
   -fx-margin : 50, 50, 50, 50;
 }
 
-/***************** Window decoration *****************/
+/***************** Progress bar *****************/
 
 .progress-bar {
     -fx-indeterminate-bar-length: 40;
