* Fixing notification button color in case of "no notification" * Applying dropshadow to username button on hover

--- a/src/main/resources/themes/default/style.css
+++ b/src/main/resources/themes/default/style.css
@@ -292,6 +292,10 @@
   -fx-background-color: transparent;
 }
 
+.username-button:hover {
+  -fx-effect: dropshadow(gaussian, rgba(255,255,255,.4), 5, 0.8, 0, 0);
+}
+
 .username-button > .label {
   -fx-text-fill: -fx-dark-text-color;
 }
